--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title</title>
+    <title>GeorgeNet OSS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/uikit.min.css"/>
@@ -9,6 +9,52 @@
     <script src="js/uikit-icons.min.js"></script>
 </head>
 <body>
+<div class="uk-padding-large">
+    <h1 class="uk-text-bold uk-margin-small">Open Source Libraries</h1>
+    <p>Check out my open source libraries and it's documentation here</p>
+    <div uk-grid class="uk-child-width-1-1 uk-child-width-1-2@m uk-child-width-1-3@l uk-margin-medium">
+        <div>
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title uk-text-bold">Jebase</h3>
+                    <p>Library for easy manipulation of JSON files of any sort: configs, small dbs, etc.</p>
+                </div>
+                <div class="uk-card-footer">
+                    <a href="/jebase" class="uk-button uk-button-text">Docs</a>&nbsp;&nbsp;
+                    <a href="https://github.com/gbougakov/jebase" class="uk-button uk-button-text">GitHub</a>&nbsp;&nbsp;
+                    <a href="https://npmjs.org/package/jebase" class="uk-button uk-button-text">NPM</a>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title uk-text-bold">ISICVerify</h3>
+                    <p>Verify ISIC cards. No API keys, just one method</p>
+                </div>
+                <div class="uk-card-footer">
+                    <a href="/isicverify" class="uk-button uk-button-text">Docs</a>&nbsp;&nbsp;
+                    <a href="https://github.com/gbougakov/isicverify" class="uk-button uk-button-text">GitHub</a>&nbsp;&nbsp;
+                    <a href="https://npmjs.org/package/isicverify" class="uk-button uk-button-text">NPM</a>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title uk-text-bold">dirls</h3>
+                    <p>A better fs.readDirSync(). And the method name is shorter</p>
+                </div>
+                <div class="uk-card-footer">
+                    <a href="/dirls" class="uk-button uk-button-text">Docs</a>&nbsp;&nbsp;
+                    <a href="https://github.com/gbougakov/dirls" class="uk-button uk-button-text">GitHub</a>&nbsp;&nbsp;
+                    <a href="https://npmjs.org/package/@georgenet/dirls" class="uk-button uk-button-text">NPM</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p class="uk-text-meta">by <a href="https://bygeorgenet.me/">George Bougakov</a> </p>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script>
 </script>
