--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <h1 class="uk-text-bold uk-margin-small">Open Source Libraries</h1>
     <p>Check out my open source libraries and it's documentation here</p>
     <div uk-grid class="uk-child-width-1-1 uk-child-width-1-2@m uk-child-width-1-3@l uk-margin-medium">
+        <div class="uk-width-1-1">
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title uk-text-bold">OpenIn</h3>
+                    <p>Let your users choose where to open the link</p>
+                </div>
+                <div class="uk-card-footer">
+                    <a href="/openin" class="uk-button uk-button-text">Docs</a>&nbsp;&nbsp;
+                    <a href="https://github.com/gbougakov/openin" class="uk-button uk-button-text">GitHub</a>&nbsp;&nbsp;
+                    <a href="https://cdn.jsdelivr.net/gh/gbougakov/openin/" class="uk-button uk-button-text">jsDelivr</a>
+                </div>
+            </div>
+        </div>
         <div>
             <div class="uk-card uk-card-default">
                 <div class="uk-card-body">
